@@ -1,6 +1,6 @@
 # To do
 
-[ ] Eliminate `File::Slurp` dependencies to get done with CPAN bug
+[x] Eliminate `File::Slurp` dependencies to get done with CPAN bug
 [x] Add single-function interface
 [ ] Check for other languages (non-English, non-Spanish)
 [ ] Write short HOWTO for those who want to use it for continuous
